--- a/ChachaT/CustomCardView.xib
+++ b/ChachaT/CustomCardView.xib
@@ -4,12 +4,6 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
-    <customFonts key="customFonts">
-        <mutableArray key="HelveticaNeue.ttc">
-            <string>HelveticaNeue</string>
-            <string>HelveticaNeue</string>
-        </mutableArray>
-    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -17,33 +11,59 @@
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Username" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="S4d-0b-hnS">
-                    <rect key="frame" x="98" y="515" width="476" height="21"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Driving girl" translatesAutoresizingMaskIntoConstraints="NO" id="qhL-rn-cDC">
+                    <rect key="frame" x="0.0" y="0.0" width="600" height="539"/>
+                </imageView>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aDJ-pE-4t4">
+                    <rect key="frame" x="0.0" y="539" width="600" height="61"/>
+                    <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=", Age" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Js5-bq-7SC">
+                            <rect key="frame" x="109" y="6" width="44" height="23"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                            <color key="textColor" red="0.69803921568627447" green="0.69803921568627447" blue="0.69803921568627447" alpha="1" colorSpace="calibratedRGB"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="T6l-F0-VzE">
+                            <rect key="frame" x="8" y="35" width="27.5" height="13"/>
+                            <fontDescription key="fontDescription" name="HiraginoSans-W3" family="Hiragino Sans" pointSize="13"/>
+                            <color key="textColor" red="0.69803921570000005" green="0.69803921570000005" blue="0.69803921570000005" alpha="1" colorSpace="calibratedRGB"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Full Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hic-8h-7Bo">
+                            <rect key="frame" x="8" y="8" width="101" height="19"/>
+                            <fontDescription key="fontDescription" name="HiraginoSans-W6" family="Hiragino Sans" pointSize="19"/>
+                            <color key="textColor" red="0.0039215686274509803" green="0.76470588235294112" blue="0.65490196078431373" alpha="1" colorSpace="calibratedRGB"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                    </subviews>
+                    <color key="backgroundColor" red="0.96470588235294119" green="0.97254901960784312" blue="0.98431372549019602" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="21" id="H64-TT-TTe"/>
+                        <constraint firstItem="hic-8h-7Bo" firstAttribute="top" secondItem="aDJ-pE-4t4" secondAttribute="top" constant="8" id="3dm-ew-8wD"/>
+                        <constraint firstItem="Js5-bq-7SC" firstAttribute="leading" secondItem="hic-8h-7Bo" secondAttribute="trailing" id="8k0-gl-rz2"/>
+                        <constraint firstAttribute="height" constant="61" id="Iv7-y2-Ggz"/>
+                        <constraint firstItem="T6l-F0-VzE" firstAttribute="leading" secondItem="hic-8h-7Bo" secondAttribute="leading" id="LU6-ru-5Ct"/>
+                        <constraint firstItem="Js5-bq-7SC" firstAttribute="baseline" secondItem="hic-8h-7Bo" secondAttribute="baseline" id="Zr8-bZ-W9p"/>
+                        <constraint firstItem="hic-8h-7Bo" firstAttribute="leading" secondItem="aDJ-pE-4t4" secondAttribute="leading" constant="8" id="dYW-bn-zlw"/>
+                        <constraint firstItem="T6l-F0-VzE" firstAttribute="top" secondItem="hic-8h-7Bo" secondAttribute="bottom" constant="8" id="s6S-I1-cV1"/>
                     </constraints>
-                    <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
-                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No posts found for this user" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ugm-aG-L6z">
-                    <rect key="frame" x="175" y="30" width="250" height="21"/>
-                    <constraints>
-                        <constraint firstAttribute="width" constant="250" id="DnY-Sn-C7a"/>
-                        <constraint firstAttribute="height" constant="21" id="jJz-qx-f74"/>
-                    </constraints>
-                    <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="14"/>
-                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    <nil key="highlightedColor"/>
-                </label>
+                </view>
             </subviews>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstItem="ugm-aG-L6z" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="30" id="Ce0-E4-IEX"/>
-                <constraint firstItem="ugm-aG-L6z" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="b3a-k9-uk4"/>
-                <constraint firstAttribute="trailing" secondItem="S4d-0b-hnS" secondAttribute="trailing" constant="26" id="f0W-Yy-Xrn"/>
-                <constraint firstAttribute="bottom" secondItem="S4d-0b-hnS" secondAttribute="bottom" constant="64" id="hMJ-z9-f6P"/>
+                <constraint firstAttribute="bottom" secondItem="aDJ-pE-4t4" secondAttribute="bottom" id="2Dz-W8-4Ja"/>
+                <constraint firstItem="qhL-rn-cDC" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="9ta-np-WQi"/>
+                <constraint firstItem="aDJ-pE-4t4" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="D5M-dp-rUT"/>
+                <constraint firstAttribute="trailing" secondItem="qhL-rn-cDC" secondAttribute="trailing" id="P2Z-ti-3nc"/>
+                <constraint firstItem="aDJ-pE-4t4" firstAttribute="top" secondItem="qhL-rn-cDC" secondAttribute="bottom" id="VfB-7x-7Zr"/>
+                <constraint firstAttribute="trailing" secondItem="aDJ-pE-4t4" secondAttribute="trailing" id="j6s-xx-dR6"/>
+                <constraint firstItem="qhL-rn-cDC" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="uJL-OT-tIq"/>
             </constraints>
+            <connections>
+                <outlet property="theCardMainImage" destination="qhL-rn-cDC" id="WSo-Bh-7vJ"/>
+            </connections>
         </view>
     </objects>
+    <resources>
+        <image name="Driving girl" width="157" height="203"/>
+    </resources>
 </document>
