--- a/ChachaT/Base.lproj/Main.storyboard
+++ b/ChachaT/Base.lproj/Main.storyboard
@@ -75,7 +75,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Driving girl" translatesAutoresizingMaskIntoConstraints="NO" id="8hk-xb-Z8g">
-                                <rect key="frame" x="0.0" y="20" width="600" height="264"/>
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="264"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="264" id="vHd-oq-IIN"/>
                                 </constraints>
@@ -88,6 +88,7 @@
                             <constraint firstItem="8hk-xb-Z8g" firstAttribute="top" secondItem="fRp-pc-gE5" secondAttribute="bottom" id="goT-7q-xaO"/>
                         </constraints>
                     </view>
+                    <nil key="simulatedStatusBarMetrics"/>
                     <connections>
                         <outlet property="imageView" destination="8hk-xb-Z8g" id="Pxs-FZ-hXM"/>
                     </connections>
