made the tinder detail card have free form size 1000

--- a/ChachaT/Base.lproj/Main.storyboard
+++ b/ChachaT/Base.lproj/Main.storyboard
@@ -71,11 +71,11 @@
                         <viewControllerLayoutGuide type="bottom" id="6ML-sB-9wT"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="vyx-nI-0mL">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="1000"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cKi-vK-cJw">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="1000"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="v5S-4V-jao" userLabel="Content View">
                                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
@@ -173,11 +173,11 @@
                                                     </label>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="50" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QhN-sR-LNs">
                                                         <rect key="frame" x="39" y="54" width="561" height="201"/>
-                                                        <mutableString key="text">Bacon ipsum dolor amet capicola jerky doner short loin meatball meatloaf, pork belly pancetta. Tenderloin landjaeger sirloin andouille kielbasa chicken cow picanha pork. Fatback beef ribeye jowl shoulder short loin tenderloin frankfurter tri-tip pork belly. Andouille meatball alcatra brisket, porchetta corned beef fatback picanha shankle pork loin.
+                                                        <string key="text">Bacon ipsum dolor amet capicola jerky doner short loin meatball meatloaf, pork belly pancetta. Tenderloin landjaeger sirloin andouille kielbasa chicken cow picanha pork. Fatback beef ribeye jowl shoulder short loin tenderloin frankfurter tri-tip pork belly. Andouille meatball alcatra brisket, porchetta corned beef fatback picanha shankle pork loin.
 
 Swine leberkas tenderloin rump, chicken kevin beef ribs venison filet mignon short loin pig. Drumstick kevin ball tip turkey pig. Beef ribs pork belly biltong picanha leberkas meatball andouille corned beef filet mignon tri-tip. Ham rump pastrami, boudin kielbasa drumstick sausage meatloaf meatball.
 
-Bacon pork chop turducken tri-tip ham hock. Brisket flank kielbasa, picanha frankfurter prosciutto jerky t-bone beef ribs kevin fatback shankle venison chicken bacon. Pork chop biltong turducken, short loin brisket tenderloin doner short ribs shankle filet mignon frankfurter pig flank. Ground round rump andouille salami ham hock.</mutableString>
+Bacon pork chop turducken tri-tip ham hock. Brisket flank kielbasa, picanha frankfurter prosciutto jerky t-bone beef ribs kevin fatback shankle venison chicken bacon. Pork chop biltong turducken, short loin brisket tenderloin doner short ribs shankle filet mignon frankfurter pig flank. Ground round rump andouille salami ham hock.</string>
                                                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                         <color key="textColor" red="0.69803921570000005" green="0.69803921570000005" blue="0.69803921570000005" alpha="1" colorSpace="calibratedRGB"/>
                                                         <nil key="highlightedColor"/>
@@ -268,6 +268,8 @@ Bacon pork chop turducken tri-tip ham hock. Brisket flank kielbasa, picanha fran
                         </variation>
                     </view>
                     <nil key="simulatedStatusBarMetrics"/>
+                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+                    <size key="freeformSize" width="600" height="1000"/>
                     <connections>
                         <outlet property="imageView" destination="8hk-xb-Z8g" id="Pxs-FZ-hXM"/>
                         <outlet property="theFirstBulletText" destination="GZp-kG-YwR" id="1K2-x8-oMM"/>
