--- a/ChachaT/Base.lproj/Main.storyboard
+++ b/ChachaT/Base.lproj/Main.storyboard
@@ -78,7 +78,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="1000"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="v5S-4V-jao" userLabel="Content View">
-                                        <rect key="frame" x="0.0" y="0.0" width="600" height="719"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="533"/>
                                         <subviews>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Driving girl" translatesAutoresizingMaskIntoConstraints="NO" id="8hk-xb-Z8g" userLabel="Profile Picture">
                                                 <rect key="frame" x="0.0" y="0.0" width="600" height="264"/>
@@ -129,8 +129,8 @@
                                                     <constraint firstItem="IkV-io-nnJ" firstAttribute="top" secondItem="dI7-Qj-h3R" secondAttribute="bottom" constant="8" id="xhl-kX-gPg"/>
                                                 </constraints>
                                             </view>
-                                            <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="dCo-OJ-te4" userLabel="Fact View">
-                                                <rect key="frame" x="0.0" y="328" width="600" height="264"/>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dCo-OJ-te4" userLabel="Fact View">
+                                                <rect key="frame" x="0.0" y="325" width="600" height="78"/>
                                                 <subviews>
                                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Bullet Point" translatesAutoresizingMaskIntoConstraints="NO" id="Wim-iW-FJm" userLabel="Bullet Point 1">
                                                         <rect key="frame" x="10" y="10" width="10" height="10"/>
@@ -160,7 +160,7 @@
                                                         </constraints>
                                                     </imageView>
                                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Top Line" translatesAutoresizingMaskIntoConstraints="NO" id="Tck-Dg-N2s" userLabel="line">
-                                                        <rect key="frame" x="0.0" y="263" width="600" height="1"/>
+                                                        <rect key="frame" x="0.0" y="77" width="600" height="1"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="1" id="DIf-9f-ind"/>
                                                         </constraints>
@@ -171,13 +171,8 @@
                                                         <color key="textColor" red="0.69803921570000005" green="0.69803921570000005" blue="0.69803921570000005" alpha="1" colorSpace="calibratedRGB"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="50" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QhN-sR-LNs">
-                                                        <rect key="frame" x="39" y="54" width="561" height="201"/>
-                                                        <string key="text">Bacon ipsum dolor amet capicola jerky doner short loin meatball meatloaf, pork belly pancetta. Tenderloin landjaeger sirloin andouille kielbasa chicken cow picanha pork. Fatback beef ribeye jowl shoulder short loin tenderloin frankfurter tri-tip pork belly. Andouille meatball alcatra brisket, porchetta corned beef fatback picanha shankle pork loin.
-
-Swine leberkas tenderloin rump, chicken kevin beef ribs venison filet mignon short loin pig. Drumstick kevin ball tip turkey pig. Beef ribs pork belly biltong picanha leberkas meatball andouille corned beef filet mignon tri-tip. Ham rump pastrami, boudin kielbasa drumstick sausage meatloaf meatball.
-
-Bacon pork chop turducken tri-tip ham hock. Brisket flank kielbasa, picanha frankfurter prosciutto jerky t-bone beef ribs kevin fatback shankle venison chicken bacon. Pork chop biltong turducken, short loin brisket tenderloin doner short ribs shankle filet mignon frankfurter pig flank. Ground round rump andouille salami ham hock.</string>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Shaq has my autograph" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="50" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QhN-sR-LNs">
+                                                        <rect key="frame" x="39" y="54" width="561" height="15"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                         <color key="textColor" red="0.69803921570000005" green="0.69803921570000005" blue="0.69803921570000005" alpha="1" colorSpace="calibratedRGB"/>
                                                         <nil key="highlightedColor"/>
@@ -212,27 +207,41 @@ Bacon pork chop turducken tri-tip ham hock. Brisket flank kielbasa, picanha fran
                                                     </mask>
                                                 </variation>
                                             </view>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XWC-yS-1iT">
+                                                <rect key="frame" x="10" y="452" width="580" height="50"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="50" id="dDc-ea-ywZ"/>
+                                                </constraints>
+                                                <state key="normal" title="Is Shaq Really That Tall?" backgroundImage="Question Bubble">
+                                                    <color key="titleColor" red="0.047058823529411764" green="0.72941176470588232" blue="0.58823529411764708" alpha="1" colorSpace="calibratedRGB"/>
+                                                </state>
+                                            </button>
                                         </subviews>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <constraints>
+                                            <constraint firstAttribute="trailing" secondItem="XWC-yS-1iT" secondAttribute="trailing" constant="10" id="3m3-Lf-yao"/>
                                             <constraint firstItem="8hk-xb-Z8g" firstAttribute="top" secondItem="q5j-vq-aso" secondAttribute="bottom" constant="-61" id="4Es-KN-xkx"/>
                                             <constraint firstItem="8hk-xb-Z8g" firstAttribute="leading" secondItem="v5S-4V-jao" secondAttribute="leading" id="7US-qG-o0r"/>
                                             <constraint firstItem="8hk-xb-Z8g" firstAttribute="top" secondItem="v5S-4V-jao" secondAttribute="top" id="FD2-qx-rfU"/>
                                             <constraint firstAttribute="bottom" secondItem="dCo-OJ-te4" secondAttribute="bottom" constant="130" id="PyY-G5-Lvp"/>
                                             <constraint firstItem="dCo-OJ-te4" firstAttribute="leading" secondItem="v5S-4V-jao" secondAttribute="leading" id="QMU-7g-Chs"/>
+                                            <constraint firstAttribute="bottom" secondItem="XWC-yS-1iT" secondAttribute="bottom" constant="31" id="U1A-iu-0Cf"/>
                                             <constraint firstItem="q5j-vq-aso" firstAttribute="top" secondItem="v5S-4V-jao" secondAttribute="top" id="VCW-xe-Mzj"/>
                                             <constraint firstAttribute="trailing" secondItem="q5j-vq-aso" secondAttribute="trailing" id="WO9-kc-fX2"/>
                                             <constraint firstItem="q5j-vq-aso" firstAttribute="top" secondItem="8hk-xb-Z8g" secondAttribute="bottom" id="cEx-7Q-tPb"/>
+                                            <constraint firstItem="XWC-yS-1iT" firstAttribute="top" secondItem="dCo-OJ-te4" secondAttribute="bottom" constant="49" id="f4y-vW-V4C"/>
                                             <constraint firstItem="q5j-vq-aso" firstAttribute="leading" secondItem="v5S-4V-jao" secondAttribute="leading" id="m0d-Qv-Dsh"/>
                                             <constraint firstAttribute="trailing" secondItem="8hk-xb-Z8g" secondAttribute="trailing" id="pYg-FL-5Gk"/>
                                             <constraint firstAttribute="bottom" secondItem="QhN-sR-LNs" secondAttribute="bottom" constant="20" id="sh9-cf-oXI"/>
                                             <constraint firstItem="dCo-OJ-te4" firstAttribute="top" secondItem="q5j-vq-aso" secondAttribute="bottom" id="t67-ZE-aKb"/>
                                             <constraint firstAttribute="trailing" secondItem="dCo-OJ-te4" secondAttribute="trailing" id="xLZ-qp-Z4y"/>
+                                            <constraint firstItem="XWC-yS-1iT" firstAttribute="leading" secondItem="v5S-4V-jao" secondAttribute="leading" constant="10" id="yL8-9X-bgv"/>
                                         </constraints>
                                         <variation key="default">
                                             <mask key="constraints">
                                                 <exclude reference="4Es-KN-xkx"/>
                                                 <exclude reference="VCW-xe-Mzj"/>
+                                                <exclude reference="PyY-G5-Lvp"/>
                                                 <exclude reference="sh9-cf-oXI"/>
                                             </mask>
                                         </variation>
@@ -285,6 +294,7 @@ Bacon pork chop turducken tri-tip ham hock. Brisket flank kielbasa, picanha fran
     <resources>
         <image name="Bullet Point" width="8" height="8"/>
         <image name="Driving girl" width="157" height="203"/>
+        <image name="Question Bubble" width="340" height="68"/>
         <image name="Top Line" width="375" height="1"/>
     </resources>
 </document>
